# MassRTS

./: .gitignore  ACTION_REQUIRED.txt  ART_WORKFLOW.md  CLAUDE.md  CMakeLists.txt  CUSTOMIZATION.md  GAMEPLAY.md  HANDOFF_SDFCRAFT.md  INTEGRATION_COMPLETE.txt  MARKETING_STRATEGY.md  MULTIPLAYER_AND_STEAM.md  NETWORK_INTEGRATION_GUIDE.md  PLAY.bat  PROJECT_PROGRESS.md  QUICKSTART.md  README.md  README.zh-CN.md  SDF_VOXEL_TERRAIN_DESIGN.md  STUCK_UNITS_DEBUG.md  _new.txt  _old.txt  _repl.py  apply_network_patch.py  build.bat  dedicated_server.bat  dobuild.sh  efix.py  fix3.py  gfix.py  hsculpt.py  play_multiplayer.bat  rfix.py  rt.py  test_net.cpp  test_network.bat
.crab/: todos.json
assets/: survival_waves.json
assets/audio/: README.md
assets/models/: README.md
docs/: DUAL_MODE_NETWORK.md  FINAL_REPORT.md  NETWORK_ARCHITECTURE.md  NETWORK_IMPLEMENTATION_SUMMARY.md  PHASE3_SUMMARY.md  PROGRESS_AND_TODO.md  ROLLBACK_NETCODE.md  SDFCRAFT_CURRENT_STATUS_AND_ROADMAP.md  SDFCRAFT_SESSION_HANDOFF.md  SDFCRAFT_VISUAL_FIXES.md  SDF_MINECRAFT_PORT_PLAN.md  SDF_TERRAIN_REALISM.md  VOXEL_SANDBOX_NETWORK.md
shaders/: billboard.frag  billboard.vert  bloom_blur.frag  bloom_prefilter.frag  brush.frag  brush.vert  compute_combat.glsl  compute_movement.glsl  compute_units.glsl  decal.frag  decal.vert  decor.frag  decor.vert  fullscreen.vert  particle.frag  particle.vert  post_composite.frag  projectile.frag  projectile.vert  sdfcraft_chunk.frag  sdfcraft_chunk.vert  sdfcraft_chunk_realistic.frag.bak  sdfcraft_chunk_stylized.frag  sdfcraft_depth.frag  sdfcraft_depth.vert  sdfcraft_select.frag  sdfcraft_select.vert  sdfcraft_sky.frag  sdfcraft_sky.vert  select.frag  skinned.frag  skinned.vert  sky.frag  terrain.frag  terrain.vert  terrain_frag_bak.glsl  unit.frag  unit.vert  unit_frag_bak2.glsl  water.frag  (+1 more)
src/: debug_frame.h  fix_all.py  main.cpp  main.cpp.bak  main.cpp.bak2  main_gpu.cpp  main_gpu.cpp.bak  main_gpu.cpp.bak3  main_gpu.cpp.gbak  main_gpu.cpp.preChange  main_gpu.cpp.rbak  main_gpu.cpp.rbak1  main_net.cpp  main_net.cpp.bk  main_planet.cpp  main_sdfcraft.cpp  net_integration.h
src/ai/: combat_system.h  movement_system.h  spatial_grid.h
src/audio/: audio_system.h
src/core/: asset_manifest.h  json.h
src/ecs/: components.h  world.h
src/game/: balance_config.h  game_config.h  game_state.h  loading_manager.h  meta_progression.h  settlement_system.h  wave_director.h
src/input/: camera.h
src/net/: client.h  protocol.h  protocol.h.tmp  server.h  session.h  socket.h  test_compression.cpp  test_persistence.cpp  test_rollback.cpp  test_tcp.cpp  test_voxel.cpp
src/net/core/: byte_buffer.h  compression.h  connection.cpp  connection.h  file_transfer.h  fixed_point.h  nat_traversal.h  packet.h  packet_batcher.h  rollback_engine.cpp  rollback_engine.h  tcp_socket.h
src/net/persistence/: region_file.h  world_storage.h
src/net/rts/: example_usage.cpp  rts_net_engine.cpp  rts_net_engine.h  rts_packets.h
src/net/voxel/: voxel_net_engine.cpp  voxel_net_engine.h  voxel_packets.h
src/platform/: steam_integration.h
src/render/: base_system.h  corpse_system.h  decor.h  fluid_system.h  gpu_compute.h  mesh_gen.h  model_library.h  obj_loader.h  particles.h  postfx.h  projectiles.h  renderer.h  sdf_terrain.h  sdf_terrain_tables.cpp  skinned_model.h  terrain.h  terrain_bak.h  terrain_noise.h
src/sdfcraft/: ai.h  blocks.h  chunk_renderer.h  craft_screen_mc.h  crafting.h  crafting_screen_exact.h  entity.h  game_server.h  gameplay_validator.cpp  hud_renderer.h  inventory.h  inventory_screen.h  inventory_screen_exact.h  inventory_screen_mc.h  item_icons.h  items.h  mc_mesher.h  mc_model.h  mesher.h  mob_renderer.h  mode.h  net_ops.h  net_protocol.h  net_session.h  net_transport_tcp.h  planet.h  planet_mesh.h  planet_renderer.h  player.h  player_preview.h  selftest.cpp  server_sim.h  sky_renderer.h  space_backdrop.h  test_net_transport.cpp  tree_renderer.h  world.h  world_ops.h
src/ui/: hud.h  hud.h.lockbak2  menu.h  text_renderer.h
test_world/region/: r.0.0.mca
test_world2/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
test_world3/region/: r.-1.-1.mca  r.-1.0.mca  r.-2.-1.mca  r.-2.0.mca  r.0.-1.mca  r.0.0.mca  r.1.-1.mca  r.1.0.mca
tools/: asset_pipeline.py  gen_dirt.py  height_probe.cpp
